--- a/pom.xml
+++ b/pom.xml
@@ -48,6 +48,12 @@
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		
+		<dependency>
+   			 <groupId>org.springframework.cloud</groupId>
+   			 <artifactId>spring-cloud-starter-openfeign</artifactId>
+   			 <version>3.0.3</version>
+		</dependency>
+		
 	</dependencies>
 
 	<build>
