--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+#actuator
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+
+#health
+
+management.endpoint.health.probes.enable=true
+management.endpoint.livenessState.enable=true
+management.endpoint.readinessState.enable=true
+
