Associando cartão com proposta

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,3 +18,4 @@ management.endpoint.health.probes.enable=true
 management.endpoint.livenessState.enable=true
 management.endpoint.readinessState.enable=true
 
+scheduling.enabled=false
