--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -93,6 +93,31 @@ services:
       KAFKA_HOST: "kafka:29092"
       JAEGER_ENDPOINT: http://jaeger:14268/api/traces
 
+  mysql-db:
+   image: mysql:8.0
+   container_name: propostas-mysql
+   environment:
+    MYSQL_ROOT_PASSWORD: root
+    MYSQL_DATABASE: propostas
+   ports:
+    - "3306:3306"
+
+ 
+  propostas:
+   image: alvesf5/propostas:v7
+   container_name: propostas-app
+   restart: on-failure
+   depends_on:
+    - mysql-db
+    - analise
+    - contas
+   environment:
+    SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/propostas
+    PROPOSTA_ANALISE: http://analise:9999
+    SERVICO_CARTAO: http://contas:8888
+   ports:
+    - "8080:8080"
+
   jaeger:
     image: jaegertracing/all-in-one
     ports:
