--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port = 8090
-spring.datasource.url=jdbc:mysql://localhost:3306/propostas?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
+server.port = 8080
+spring.datasource.url=jdbc:mysql://mysql-db:3306/propostas?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-classe-name=com.mysql.cj.jdbc.Driver
@@ -18,4 +18,8 @@ management.endpoint.health.probes.enable=true
 management.endpoint.livenessState.enable=true
 management.endpoint.readinessState.enable=true
 
-scheduling.enabled=false
+scheduling.enabled=true
+
+#APIs consumidas 
+servico.analise.proposta=${PROPOSTA_ANALISE:http://localhost:9999}
+servico.recurso.cartao=${SERVICO_CARTAO:http://localhost:8888}
