Bloqueio Notificação Legado

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -61,6 +61,7 @@ services:
       KEYCLOAK_USER: admin
       KEYCLOAK_PASSWORD: Pa55w0rd
       POSTGRES_PORT_5432_TCP_ADDR: 127.0.0.1
+      #KEYCLOAK_FRONTEND_URL: http://keycloak:8080/auth
 
   analise:
     image: 'zupacademy/analise-financeira'
@@ -103,20 +104,23 @@ services:
     - "3306:3306"
 
  
-  propostas:
-   image: alvesf5/propostas:v7
-   container_name: propostas-app
-   restart: on-failure
-   depends_on:
-    - mysql-db
-    - analise
-    - contas
-   environment:
-    SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/propostas
-    PROPOSTA_ANALISE: http://analise:9999
-    SERVICO_CARTAO: http://contas:8888
-   ports:
-    - "8080:8080"
+  #propostas:
+   #image: alvesf5/propostas:v7
+   #container_name: propostas-app
+   #restart: on-failure
+   #depends_on:
+    #- mysql-db
+    #- analise
+    #- contas
+    #- keycloak
+   #environment:
+    #SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/propostas
+    #PROPOSTA_ANALISE: http://analise:9999
+    #SERVICO_CARTAO: http://contas:8888
+    #KEYCLOAK_ISSUER_URI: http://keycloack:8080/auth/realms/nosso-cartao
+    #KEYCLOAK_JWKS_URI: http://keycloack:8080/auth/realms/nosso-cartao/protocol/openid-connect/certs
+   #ports:
+    #- "8080:8080"
 
   jaeger:
     image: jaegertracing/all-in-one
