--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,11 +18,12 @@ management.endpoint.health.probes.enable=true
 management.endpoint.livenessState.enable=true
 management.endpoint.readinessState.enable=true
 
-scheduling.enabled=false
+scheduling.enabled=true
 
 #APIs consumidas 
 servico.analise.proposta=${PROPOSTA_ANALISE:http://localhost:9999}
 servico.recurso.cartao=${SERVICO_CARTAO:http://localhost:8888}
+
 
 ## spring security resource server configuration
 spring.security.oauth2.resourceserver.jwt.issuer-uri=${KEYCLOAK_ISSUER_URI:http://localhost:18080/auth/realms/nosso-cartao}
