--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port = 8080
+server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/propostas?createDatabaseIfNotExist=true&useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=root
@@ -18,6 +18,12 @@ management.endpoints.web.exposure.include=*
 management.endpoint.health.probes.enable=true
 management.endpoint.livenessState.enable=true
 management.endpoint.readinessState.enable=true
+
+health.proposta.url=${HEALTH_PROPOSTA_URL:http://localhost}
+health.proposta.porta=${HEALTH_PROPOSTA_PORTA:9999}
+
+health.cartao.url=${HEALTH_CARTAO_URL:http://localhost}
+health.cartao.porta=${HEALTH_CARTAO_PORTA:8888}
 
 scheduling.enabled=true
 
