--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,8 +38,10 @@ spring.security.oauth2.resourceserver.jwt.jwk-set-uri=${KEYCLOAK_JWKS_URI:http:/
 
 
 #Métricas Prometheus
+servico.prometheus=${SERVICO_PROMETHEUS:http://localhost:9090}
 management.endpoints.web.exposure.include=info,health,prometheus
 management.endpoints.prometheus.enabled=true
+actuator.prometheus=${ACTUATOR_PROMETHEUS:http://localhost:8080/actuator/prometheus}
 
 # Jaeger - Habilita ou não
 opentracing.jaeger.enabled=${JAEGER_ENABLED:true}
